Fix up text spacing and capitalization

--- a/patient/asset/user_styles.css
+++ b/patient/asset/user_styles.css
@@ -647,6 +647,7 @@ hr {
 
 .service-wrapper p {
   display: inline-block;
+  text-align: justify;
 }
 .service-wrapper img {
   max-width: 100%;
